--- a/style/style.css
+++ b/style/style.css
@@ -131,3 +131,59 @@ nav {
   padding: 10px 20px;
   border: none;
 }
+
+
+/* news  */
+
+.news-title{
+  font-size: 28px;
+  padding: 20px 0;
+}
+
+
+
+.card1{
+  display: flex;
+  align-items: center;
+  margin: 50px;
+}
+
+.card1-img > img{
+  border-radius: 20px;
+}
+
+
+.card1-content{
+  margin-left: 50px;
+}
+
+.card1-title > h2{
+  font-size: 32px;
+  padding: 15px 0;
+}
+
+/* .news-logo{
+  padding: 20px 0;
+} */
+
+.date-time{
+  padding: 10px 0;
+}
+.date-time span{
+  padding-left: 10px;
+}
+
+.news-description{
+  padding: 10px 0 20px 0;
+  line-height: 1.5;
+}
+
+.news-btn > .btn{
+  background-color: #006a50;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 8px;
+}
