added news card2 section

--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,12 @@ nav {
 
 
 /* news  */
-
+.card2{
+  display: flex;
+  align-items: center;
+  margin-right: 50px;
+  margin: 100px 100px 50px 0;
+}
 .news-title{
   font-size: 28px;
   padding: 20px 0;
@@ -162,6 +167,7 @@ nav {
   padding: 15px 0;
 }
 
+
 /* .news-logo{
   padding: 20px 0;
 } */
@@ -187,3 +193,45 @@ nav {
   border: none;
   border-radius: 8px;
 }
+
+
+/* card2  */
+
+.card2-title > h2{
+  font-size: 32px;
+  padding: 15px 0;
+}
+
+.date-time{
+  padding: 10px 0;
+}
+.date-time span{
+  padding-left: 10px;
+}
+
+.news-description{
+  padding: 10px 0 20px 0;
+  line-height: 1.5;
+}
+
+.news-btn > .btn{
+  background-color: #006a50;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 8px;
+}
+
+
+.card2-img > img{
+  border-radius: 20px;
+}
+
+
+.card2-content{
+  margin-left: 50px;
+}
+
+
